client/src/assets/styles/_game.scss
.game__block{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: flex-start;
    gap: 1rem 3rem;
}

.game__title{
    margin: 0;
    margin-bottom: 1rem;
	flex-grow: 1;
	min-width: 100%;
}

.game__nav{
	margin: 0;
    margin-bottom: 1rem;
	margin-top: -3.5rem;
	flex-grow: 1;
	min-width: 100%;
	text-align: right;
}

.game__edit_button{
	
}

.game__cover, .game__attributes{
    flex-grow: 1;
    overflow: hidden;
    color: var(--main-secondary-color);
}

.game__cover{
    max-width: 250px;
}

.game__cover > img{
    width: 100%;
}

.game__attributes > li{
    margin-bottom: 1rem;
}

.game__attributes--title{
    font-weight: 700;
    color: var(--main-primary-color);
    padding-bottom: 0;
    margin-bottom: 0.25rem;
    text-transform: uppercase;
}

.game__confirm_delete{
	position: fixed;
	top:0;
	bottom:0;
	left:0;
	right:0;
	background-color: var(--shadow-color);
	display: flex;
	justify-content: center;
	align-items: center;
	z-index: 10000;
	opacity: 0;
	pointer-events: none;
	transition: all 0.5s ease-in-out;
}

.game__warning_box{
	background-color: var(--white);
	color: var(--input-secondary-color);
	padding: 3rem;
	text-align: center;
	max-width: 400px;
	border-radius: 5px;
	font-size: 1.2rem;
	font-weight: 700;
}

.game__warning_box > button{
	margin-right: 2rem;
	font-size: 1.1rem;
	background-color: var(--main-secondary-color);
	margin-top: 1rem;
}
.game__warning_box > button:last-child{
	margin-right: 0;
	background-color: var(--red);
}

@media screen and (max-width: 540px) {
    .game__block{
        flex-wrap: wrap;
    }

    .game__cover{
        width: 100%;
        max-width: initial;
    }

    .game__summary{
        margin-top: 2rem;
    }
}

